libtheora 1.0alph6 (unreleased)

 * Major RTP payload specification update
 * Minor format specification updates
 * Fix some spurious calls to free() instead of _ogg_free()
 * Fix invalid array indexing in PixelLineSearch()
 * Improve robustness against invalid input
 * General warning cleanup

libtheora 1.0alpha5 (2005 August 20)

 * Fixed bitrate management bugs that caused popping and encode
   errors
 * Fixed a crash problem with the theora_state internals not
   being intialized properly.
 * new utility function:
   - theora_granule_shift()
 * dump_video example now makes YUV4MPEG files by default, so
   the results can be fed back to encoder_example and similar
   tools. The old behavior is restored through the '-r' switch.
 * ./configure now prints a summary
 * simple unit test of the comment api under 'make check'
 * misc code cleanup, warning and leak fixes

libtheora 1.0alpha4 (2004 December 15)

 * first draft of the Theora I Format Specification
 * API documentation generated from theora.h with Doxygen
 * fix a double-update bug in the motion analysis
 * apply the loop filter before filling motion vector border 
   in the reference frame
 * new utility functions:
   - theora_packet_isheader(),
   - theora_packet_iskeyframe()
   - theora_granule_frame()
 * optional support for building without floating point
 * optional support for building without encode support 
 * various build and packaging fixes
 * pkg-config support
 * SymbianOS build support

libtheora 1.0alpha3 (2004 March 20)

 UPDATE: on 2004 July 1 the Theora I bitstream format was frozen. Files
 produced by the libtheora 1.0alpha3 reference encoder will always be
 decodable by the Theora I spec.

 * Bitstream info header FORMAT CHANGES:
   - move the granulepos shift field to maintain byte alignment longer.
   - reserve 5 additional bits for subsampling and interlace flags.
 * Bitstream setup header FORMAT CHANGES:
   - support for a range of interpolated quant matricies.